# inkalyze

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  image_utils.py  main.py  ocr.py
frontend/: README.md  pubspec.yaml
